-
Bug
-
Resolution: Done
-
P0: Blocker
-
5.10.0 Alpha
-
None
-
macOS
-
54c3ab7a1018ee2e5c1767d233e1c1d9e42425c7
Module "qt/qtdeclarative" (72f320a266d7f6e8055fdb57d0996363fcbc027a) Failed test(s): /Users/qt/work/qt/qtdeclarative/tests/auto/qmltest/events:
agent:2017/09/03 09:43:03 build.go:570:
agent:2017/09/03 09:43:03 build.go:401: Executing instruction 128 of 177 - RunQtUnitTest
agent:2017/09/03 09:43:03 build.go:279: [make check -j1] 900 900
/Users/qt/work/install/bin/qmltestrunner
-
-
-
-
-
-
-
-
- Start testing of qmltestrunner *********
Config: Using QtTest library 5.10.0, Qt 5.10.0 (x86_64-little_endian-lp64 shared (dynamic) release build; by Clang 8.1.0 (clang-802.0.42) (Apple))
PASS : qmltestrunner::mouserelease::initTestCase()
PASS : qmltestrunner::mouserelease::test_doSomethingInsteadOfDragging(short)
PASS : qmltestrunner::mouserelease::test_doSomethingInsteadOfDragging(long)
PASS : qmltestrunner::mouserelease::test_doSomethingInsteadOfDragging(nothing_short)
PASS : qmltestrunner::mouserelease::test_doSomethingInsteadOfDragging(long_nothing)
PASS : qmltestrunner::mouserelease::test_doSomethingInsteadOfDragging(short_update)
PASS : qmltestrunner::mouserelease::test_doSomethingInsteadOfDragging(long_update)
PASS : qmltestrunner::mouserelease::test_doSomethingInsteadOfDragging(nothing_short_up)
PASS : qmltestrunner::mouserelease::test_doSomethingInsteadOfDragging(long_nothing_up)
PASS : qmltestrunner::mouserelease::test_mouseDrag(short)
PASS : qmltestrunner::mouserelease::test_mouseDrag(long)
PASS : qmltestrunner::mouserelease::test_mouseDrag(longshort)
PASS : qmltestrunner::mouserelease::test_mouseDrag(shortlong)
PASS : qmltestrunner::mouserelease::cleanupTestCase()
PASS : qmltestrunner::Events::initTestCase()
SKIP : qmltestrunner::Events::test_key_click() test_key_click() is unstable, QTBUG-27671
Loc: [/Users/qt/work/qt/qtdeclarative/tests/auto/qmltest/events/tst_events.qml(93)]
PASS : qmltestrunner::Events::test_mouse_click()
QWARN : qmltestrunner::Events::test_mouse_click_subwindow() qt.qpa.cocoa.window: Window position outside any known screen, using primary screen
PASS : qmltestrunner::Events::test_mouse_click_subwindow()
PASS : qmltestrunner::Events::test_mouse_doubleclick()
PASS : qmltestrunner::Events::cleanupTestCase()
PASS : qmltestrunner::touch::initTestCase()
PASS : qmltestrunner::touch::test_childMapping()
PASS : qmltestrunner::touch::test_fullSequence()
PASS : qmltestrunner::touch::test_secondWindow()
PASS : qmltestrunner::touch::test_simpleChain()
PASS : qmltestrunner::touch::cleanupTestCase()
PASS : qmltestrunner::WheelEvents::initTestCase()
FAIL! : qmltestrunner::WheelEvents::test_wheel() 'verify()' returned FALSE. ()
Loc: [/Users/qt/work/qt/qtdeclarative/tests/auto/qmltest/events/tst_wheel.qml(69)]
PASS : qmltestrunner::WheelEvents::cleanupTestCase()
Totals: 27 passed, 1 failed, 1 skipped, 0 blacklisted, 9161ms - Finished testing of qmltestrunner *********
make: *** [check] Error 1
- Start testing of qmltestrunner *********
-
-
-
-
-
-
-
agent:2017/09/03 09:43:13 build.go:203: Process finished with error: exit status 2
agent:2017/09/03 09:43:13 build.go:155: Error reading from stdout/err: exit status 2
agent:2017/09/03 09:43:13 agent.go:76: ERROR building: exit status 2
Details: https://testresults.qt.io/coin/integration/qt/qt5/tasks/1504418083
Tested changes (refs/builds/qtci/5.10/1504418077):
https://codereview.qt-project.org/#/q/e38a07f4e133cc5571b6649fc378301f971d3358,n,z Update submodules on '5.10' in qt5
| For Gerrit Dashboard: QTBUG-62964 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 204496,1 | Revert "macOS: Implement QWindow::requestUpdate() in terms of setNeedsDisplay" | 5.10 | qt/qtbase | Status: ABANDONED | 0 | 0 |
| 204505,2 | macOS: Fix support for issuing requestUpdate during expose event | 5.10 | qt/qtbase | Status: MERGED | +2 | 0 |